--- a/css/main.css
+++ b/css/main.css
@@ -38,3 +38,13 @@ flex: 1;
 .navigation{
 
 }
+/*meida query*/
+@media screen and (max-width:600px){
+  ..header-menu{
+
+    flex-direction: column;
+  }
+  .header-date{
+    flex-direction: column;
+  }
+}
